# Application-Cho-Viego

./: .env.example  .gitignore  KNOWN_ISSUES.md  README.md  ROADMAP.md  pyproject.toml  requirements-dev.txt  requirements.txt
Application viego agent/: AGENTS.md  ROADMAP.md  pyproject.toml  requirements.txt
docs/: ADAPTIVE_DOCX_RENDERER.md  AI_GUIDELINES.md  APPLICATION_DATA.md  ARCHITECTURE.md  CODEX_OPERATING_GUIDE.md  KNOWN_ISSUES.md  MASTER_PROFILE.md  MVP_VALIDATION_STATUS.md  PRODUCT_FEATURE_IDEAS.md  PRODUCT_SPEC.md  PROJECT_STATUS.md  REFERENCE_DOCX_LAYOUT_ANALYSIS.md  RESUME_APPLICATION_VALUE_MODEL.md  RESUME_COMPOSITION_PAGE_FILL.md  RESUME_DECISION_ENGINE.md  RESUME_OPTIMIZATION_ENGINE.md  ROADMAP.md  ROLE_CLASSIFICATION.md  TEMPLATE_ENGINE.md  TEMPLATE_V1.md
manual-test/: build_template_v1_template.py  embedded-systems-engineer-posting.txt  generate_hybrid_convergence_artifacts.py  job-description.txt.txt  live_gemini_smoke.py  profile.json  render_deterministic_docx.py  run_gemini_structured_output_canary.py  run_production_writer_smoke.py
tests/: convergence_cases.py  fakes.py  test_adaptive_rendering.py  test_application_data.py  test_composition_reconciliation.py  test_cover_letter.py  test_experience_package_selection.py  test_frontend_navigation.py  test_gemini_adapter.py  test_gemini_integration.py  test_gemini_writer_contract.py  test_generated_resume_artifact.py  test_health.py  test_hybrid_resume_pipeline.py  test_hybrid_role_classifier.py  test_job_discovery_streamlit.py  test_job_intake.py  test_live_gemini_smoke.py  test_llm_services.py  (+30 more)
(+194 files in other folders)
