[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-tailor"
version = "0.1.0"
description = "Evidence-backed AI resume tailoring platform"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["gemini_integration: requires configured Gemini credentials and may incur API cost", "job_source_integration: opt-in tests that require explicitly approved live Greenhouse or Lever configuration"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
resume_tailor = ["templates/*.docx", "templates/*.json"]
